 Bug 477739 - Exception when clicking star icon (no editBookmarkPanel, broken JSON backup), r=dietrich a=blocking191