toolkit/components/places/tests/unit/test_418643_removeFolderChildren.js
@@ -159,6 +159,13 @@ function check_bookmarks(aFolderId) {
 
   // test that observer has been called for (and only for) deleted items
   do_check_eq(observer._onItemRemovedItemIds.length, deletedBookmarkIds.length);
+
+  // Sanity check: all roots should be intact
+  do_check_eq(bmSvc.getFolderIdForItem(bmSvc.placesRoot), 0);
+  do_check_eq(bmSvc.getFolderIdForItem(bmSvc.bookmarksMenuFolder), bmSvc.placesRoot);
+  do_check_eq(bmSvc.getFolderIdForItem(bmSvc.tagsFolder), bmSvc.placesRoot);
+  do_check_eq(bmSvc.getFolderIdForItem(bmSvc.unfiledBookmarksFolder), bmSvc.placesRoot);
+  do_check_eq(bmSvc.getFolderIdForItem(bmSvc.toolbarFolder), bmSvc.placesRoot);
 }
 
 // main
